# mcsh

./: .gitignore  Makefile.am  README.adoc  README.adoc.m4  README.md  autoreset.sh  bootstrap  bootstrap.sh  configure.ac  make.sh  mk-doc.sh
.github/workflows/: tests.yaml
doc/: manual.txt
m4/: common.m4
scripts/: util.zsh
src/: .gitignore  README.adoc  activations.c  activations.h  buffer.c  buffer.h  builtins.c  builtins.h  c-utils-types.h  exceptions.c  exceptions.h  jenkins-hash.h  junk.c  list-array.c  list-array.h  list_i.h  log.c  log.h  lookup.h  lookup3.c  mcsh-calc.c  mcsh-data.c  mcsh-data.h  mcsh-expr-grammar.y  mcsh-expr-lexer.l  mcsh-expr-parser.c  mcsh-expr-parser.h  mcsh-hp.c  mcsh-iface.c  mcsh-iface.h  mcsh-main.c  mcsh-parser-nodes.h  mcsh-parser.c  mcsh-parser.h  mcsh-pp.c  mcsh-preprocess.c  mcsh-preprocess.h  mcsh-script-bison-api.h  mcsh-script-grammar.y  mcsh-script-lexer.l  (+18 more)
test/: run  vg.sed  vg.sh
test/bash/: fib.sh
test/calc/: 008-blank.mcc  009-idiv.mcc  014-4n2t2.mcc  015-4t5p8.mcc  016-36d2d3.mcc  017-DBZ.mcc  018-paren.mcc  019-paren-plus.mcc  020-paren-ops.mcc  021-eq.mcc  022-lt.mcc  023-gtp.mcc  024-gep.mcc  050-semicolon.mcc  051-semicolon.mcc  052-semicolonp.mcc  105-op.mcc  About.txt  shorten.awk  test-all.zsh  test.sh
test/hp/: 010-env.mc
test/script/: 0020-string-1.mc  0023-string-2.mc  0120-comment.mc  0121-comment.mc  0122-comment.mc  0200-nospace-1.mc  0205-emptystring.mc  0300-semicolon.mc  0400-expr-1.mc  0401-expr.mc  0405-neg.mc  0410-float-1.mc  0460-tern.mc  0600-block-if.mc  0605-if-nest.mc  0606-if-semis.mc  0610-block-command.mc  0710-cmd.mc  0801-size.mc  0805-subscript.mc  0806-range.mc  0807-range-1.mc  0808-range-2.mc  0809-regex.mc  0810-regsub.mc  0811-vartest.mc  0821-glob.mc  0822-glob-list.mc  0830-expand-01.mc  0831-expand-01.mc  1100-not-builtin.mc  1101-err-int.mc  1201-prints.mc  1202-prints.mc  1208-print.mc  1209-print.mc  1210-uni-1.mc  1305-print-pwd.mc  1306-string-plus.mc  1310-subst.mc  (+99 more)
test/unit/: arg-extras.c  generics-1.c  named-args-1.c  named-args-2.c  named-args-3.c
test/util/: buffer-1.c  check-1.c  check-2.c  check-3.c  check-4.c  fork-1.c  log-1.c  module.mk  strlcpy-1.c  strmap-1.c  strmap-2.c  strmap-3.c  strmap-4.c  test.sh  trim.c
